# smart-bomberman

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: mypy.yml
src/: all_loc.txt  cli.py  map_loc.txt
src/Training/Logs/: monitor.csv
src/Training/Logs/0629_183256_100k/: events.out.tfevents.1688054611.edr04697.dip.tu-dresden.de.64443.0
src/Training/Logs/0629_224258_50k/: events.out.tfevents.1688070453.KennoMacBook.local.64955.0
src/Training/Logs/0629_235706_50k/: events.out.tfevents.1688074934.KennoMacBook.local.65644.0
src/Training/Logs/0630_001513_50k/: events.out.tfevents.1688076019.KennoMacBook.local.65839.0
src/Training/Logs/DQN_1/: events.out.tfevents.1688559209.LAPTOP-MQ86F5S0.8580.0
src/Training/Logs/DQN_2/: events.out.tfevents.1688561286.LAPTOP-MQ86F5S0.8300.0
src/Training/Logs/PPO_1/: events.out.tfevents.1688193623.LAPTOP-MQ86F5S0.20512.0  events.out.tfevents.1688722160.edr15014.dip.tu-dresden.de.42758.0
src/Training/Logs/PPO_10/: events.out.tfevents.1688208093.LAPTOP-MQ86F5S0.34504.0
src/game/: BBM_env.py  bomb.py  button.py  constants.py  custom_callback.py  enemy.py  explosion.py  gateway.py  item.py  level.py  maingame.py  menu.py  player.py  settings.py  tile.py  train.py
src/game/agent_enviornment/: gym_environment.py  inference.py
src/game/algorithms/: __init__.py  a_star.py
src/game/envs/: smart_bomberman_env.py
src/game/multiplayer/: multiplayer_game.py  multiplayer_level.py
src/game/utils/: fileutils.py
src/maps/: level.txt  map_1.csv  map_2.csv  map_3.csv
(+64 files in other folders)
