[metadata]
name = smart-bomberman
description = A game for VC Team Project 2023
author = ["Divyendu", "Juhyun", "Ken", "Sandeep"]
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    game

python_requires = >=3.8
package_dir =
    =src
zip_safe = no


[options.entry_points]
console_scripts =
    smart-bomberman = cli:run_the_game

[options.extras_require]
testing =
    mypy>=0.910
    flake8>=3.9

[options.package_data]
game = py.typed

[flake8]
max-line-length = 160